Fix JDK 11 code-level incompatibilities
sun.nio.ch.DirectBuffer.cleaner() is of type jdk.internal.ref.Cleaner on
JDK9+. It's also not accessible due to tighter encapsulation without
special handling like --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED